    new includes/user.inc file.  This BREAKS the NIS user authentication,
    but it should make adding LDAP (or any other user table) support
    much simpler.
  - Added preference settings for receiving email.  Users can now
    decide whether they want to receive email for event reminders,
    new events, updated events, deleted events, and rejected events.
  - Fixed bug: SQL syntax errir in getting events for other people for
    layers.
  - Fixed bug: Edit event page would get JavaScript error on save
    if using 24-hour mode.
  - Fixed bug: code to send email reminder was commented out
  - Fixed bug: was displaying event duration incorrectly in email
    reminders.
  - Fixed bug: error message on missing argument to my_array_slice().
  - Security fixes
  - Updated translations: French
Version 0.9.27 (20 May 01)
  - Added support for customizing event fields.  This allows each
    site to add textual fields, dates, URLs, etc. without having
    to customize their database or make code changes.
    All customization takes place in includes/site_extras.inc.
    These changes include two new database tables that must
    be created.  See UPGRADING.
  - Added support for email reminders.  This is handled by
    the custom field events (see includes/site_extras.inc).
    Requires cron or cron-like tool.
  - Support W3C standards for use with the event popup windows
    which should work with Mozilla, Netscape 6.X and MSIE 5.X.
    Code submitted by Benoit Maisonny.
  - Restored support for PHP3 that was broken with the addition of
    the call to array_splice (a PHP4-only function).  There is
    now a PHP3-compatible implementation.
  - Patch 403822 from David Guthrie:
    - improve checking for conflicts to include repeating events
    - allow 15:00 am to be recognized as 3:00 pm
  - Patch 406663: improve handling of new lines when viewing an
    event
  - Fixed tables-oracle.sql to use /* ... */ style comments.
    Patch 403744 from Guillaume Laurent.