@@ -166,29 +166,35 @@ for ( $d = 0; $d < 7; $d++ ) {
     // print out any repeating events that are before this one...
     while ( $cur_rep < count ( $rep ) &&
       $rep[$cur_rep]['cal_time'] < $ev[$i]['cal_time'] ) {
+      if ( $GLOBALS["DISPLAY_UNAPPROVED"] != "N" ||
+        $rep[$cur_rep]['cal_status'] == 'A' )
+        html_for_event_week_at_a_glance ( $rep[$cur_rep]['cal_id'],
+          $date, $rep[$cur_rep]['cal_time'],
+          $rep[$cur_rep]['cal_name'], $rep[$cur_rep]['cal_description'],
+          $rep[$cur_rep]['cal_status'], $rep[$cur_rep]['cal_priority'],
+          $rep[$cur_rep]['cal_access'], $rep[$cur_rep]['cal_duration'],
+          $rep[$cur_rep]['cal_login'], $hide_icons );
+      $cur_rep++;
+    }
+    if ( $GLOBALS["DISPLAY_UNAPPROVED"] != "N" ||
+      $ev[$i]['cal_status'] == 'A' )
+      html_for_event_week_at_a_glance ( $ev[$i]['cal_id'],
+        $date, $ev[$i]['cal_time'],
+        $ev[$i]['cal_name'], $ev[$i]['cal_description'],
+        $ev[$i]['cal_status'], $ev[$i]['cal_priority'],
+        $ev[$i]['cal_access'], $ev[$i]['cal_duration'],
+        $ev[$i]['cal_login'], $hide_icons );
+  }
+  // print out any remaining repeating events
+  while ( $cur_rep < count ( $rep ) ) {
+    if ( $GLOBALS["DISPLAY_UNAPPROVED"] != "N" ||
+      $rep[$cur_rep]['cal_status'] == 'A' )
       html_for_event_week_at_a_glance ( $rep[$cur_rep]['cal_id'],
         $date, $rep[$cur_rep]['cal_time'],
         $rep[$cur_rep]['cal_name'], $rep[$cur_rep]['cal_description'],
         $rep[$cur_rep]['cal_status'], $rep[$cur_rep]['cal_priority'],
         $rep[$cur_rep]['cal_access'], $rep[$cur_rep]['cal_duration'],
         $rep[$cur_rep]['cal_login'], $hide_icons );
-      $cur_rep++;
-    }
-    html_for_event_week_at_a_glance ( $ev[$i]['cal_id'],
-      $date, $ev[$i]['cal_time'],
-      $ev[$i]['cal_name'], $ev[$i]['cal_description'],
-      $ev[$i]['cal_status'], $ev[$i]['cal_priority'],
-      $ev[$i]['cal_access'], $ev[$i]['cal_duration'],
-      $ev[$i]['cal_login'], $hide_icons );
-  }
-  // print out any remaining repeating events
-  while ( $cur_rep < count ( $rep ) ) {
-    html_for_event_week_at_a_glance ( $rep[$cur_rep]['cal_id'],
-      $date, $rep[$cur_rep]['cal_time'],
-      $rep[$cur_rep]['cal_name'], $rep[$cur_rep]['cal_description'],
-      $rep[$cur_rep]['cal_status'], $rep[$cur_rep]['cal_priority'],
-      $rep[$cur_rep]['cal_access'], $rep[$cur_rep]['cal_duration'],
-      $rep[$cur_rep]['cal_login'], $hide_icons );
     $cur_rep++;
   }
 
