@@ -6,7 +6,9 @@ Version 0.9.28dev (31 May 01)
   - Added preference settings for receiving email.  Users can now
     decide whether they want to receive email for event reminders,
     new events, updated events, deleted events, and rejected events.
-  - Fixed bug: SQL syntax errir in getting events for other people for
+  - Fixed bug: Was displaying unapproved events when user set preferences
+    to not display them (in day, week and month views).
+  - Fixed bug: SQL syntax error in getting events for other people for
     layers.
   - Fixed bug: Edit event page would get JavaScript error on save
     if using 24-hour mode.
